Fixed centering issue on mobile.
Also added autoprefixing to the Fly build process.

Eventually need to add hover effect for links and rethink font family
for name.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,16 +1,11 @@
 #name {
+	text-align: center;
 	font-family: "Source Code Pro", monospace;
 	font-size: 45pt;
 }
 
-#icons {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 30rem;
-}
-
 .icon {
+	display: inline-block;
 	width: 5rem;
 	height: 5rem;
 	padding: 0 1.5rem 0 1.5rem;
